
[package]
name = "gdutils"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fetch Geometry Dash data easily"

[dependencies]
reqwest = { version = "0.13.2", features = ["form"]}
rand = "0.10.0"
xor_cryptor_keylen = { git = "https://github.com/JuxGD/xor_cryptor_keylen", tag = "v2.0.41" }
base64 = "0.22.1"
rust-string-random = "0.1.0"
colonparse = "0.1.0"
tokio = { version = "1.51.0", features = ["full"] }
